# fastapi-ws-grpc-granian

./: .gitignore  LICENSE  README.md  grpc_service.py  main.py  myservice_pb2.py  myservice_pb2_grpc.py  pyproject.toml  ws_connection_manager.py
.devcontainer/: devcontainer.json
.devcontainer/scripts/: setup.sh
proto/: myservice.proto
scripts/: generate_grpc.py
src/: app.py  config.py
src/api/: routes.py
src/grpc/: service.py
src/websocket/: connection_manager.py
static/: index.html
tests/: test_api.py
