[project]
name = "granian-fastapi"
version = "0.1.0"
description = "Testing Granian Rust server for Python with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "granian>=2.4.2",
    "grpcio>=1.74.0",
    "grpcio-reflection>=1.74.0",
    "grpcio-status>=1.74.0",
    "grpcio-tools>=1.74.0",
    "protobuf>=6.31.1",
    "websockets>=15.0.1",
]
