[project]
name = "granian-fastapi"
version = "0.1.0"
description = "Testing Granian Rust server for Python with FastAPI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "granian>=2.4.2",
    "grpcio>=1.74.0",
    "grpcio-reflection>=1.74.0",
    "grpcio-status>=1.74.0",
    "grpcio-tools>=1.74.0",
    "protobuf>=6.31.1",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",  # Required for TestClient async support
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
generate-grpc = "scripts.generate_grpc:main"
